force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/EC_Mulesoft_CDM_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is used by Mulesoft to dump the CDM Data</description>
    <label>Mulesoft CDM Staging</label>
    <nameField>
        <label>Mulesoft CDM Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mulesoft CDM Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>