force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_data_intg_exec_id__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_data_intg_exec_id__c</fullName>
    <label>EC_Account_data_intg_exec_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>