force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_Divisional_Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_Divisional_Business_Unit_Name__c</fullName>
    <label>Divisional Business Unit Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>