force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_Global_Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_Global_Business_Unit_Code__c</fullName>
    <label>Global Business Unit Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>