force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>