force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_Name_English__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_Name_English__c</fullName>
    <label>Account Name English</label>
    <length>100</length>
    <type>Text</type>
</CustomField>