force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Account_State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_State_Province_Code__c</fullName>
    <label>State Province Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>