force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Action__c.field-meta.xml
<CustomField>
    <fullName>EC_Action__c</fullName>
    <label>Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>