force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Alias__c.field-meta.xml
<CustomField>
    <fullName>EC_Alias__c</fullName>
    <formula>LEFT(EC_First_Name__c,1)&amp; LEFT(EC_Last_Name__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias</label>
    <type>Text</type>
</CustomField>