force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Application_code__c.field-meta.xml
<CustomField>
    <fullName>EC_Application_code__c</fullName>
    <label>Application code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>