force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>EC_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>