force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_City__c.field-meta.xml
<CustomField>
    <fullName>EC_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>