force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Community_Nickname__c.field-meta.xml
<CustomField>
    <fullName>EC_Community_Nickname__c</fullName>
    <label>Community Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>