force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Contact__c.field-meta.xml
<CustomField>
    <fullName>EC_Contact__c</fullName>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>