force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Context_Point_Key__c.field-meta.xml
<CustomField>
    <fullName>EC_Context_Point_Key__c</fullName>
    <label>Context Point Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>