force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Corporate_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Corporate_Reference_Number__c</fullName>
    <label>Corporate Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>