force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Country_ISO3_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Country_ISO3_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>