force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Created_On__c.field-meta.xml
<CustomField>
    <fullName>EC_Created_On__c</fullName>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>