force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Culture__c.field-meta.xml
<CustomField>
    <fullName>EC_Culture__c</fullName>
    <label>Culture</label>
    <length>30</length>
    <type>Text</type>
</CustomField>