force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Currency__c.field-meta.xml
<CustomField>
    <fullName>EC_Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AFN</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>ANG</fullName>
            </value>
            <value>
                <fullName>AOA</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>AWG</fullName>
            </value>
            <value>
                <fullName>AZN</fullName>
            </value>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BBD</fullName>
            </value>
            <value>
                <fullName>BDT</fullName>
            </value>
            <value>
                <fullName>BGN</fullName>
            </value>
            <value>
                <fullName>BHD</fullName>
            </value>
            <value>
                <fullName>BIF</fullName>
            </value>
            <value>
                <fullName>BMD</fullName>
            </value>
            <value>
                <fullName>BND</fullName>
            </value>
            <value>
                <fullName>BOB</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>BSD</fullName>
            </value>
            <value>
                <fullName>BTN</fullName>
            </value>
            <value>
                <fullName>BWP</fullName>
            </value>
            <value>
                <fullName>BYN</fullName>
            </value>
            <value>
                <fullName>BZD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CDF</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>