force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Customer__c.field-meta.xml
<CustomField>
    <fullName>EC_Customer__c</fullName>
    <label>Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>