force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Customer_Access__c.field-meta.xml
<CustomField>
    <fullName>EC_Customer_Access__c</fullName>
    <label>Customer Access</label>
    <length>100</length>
    <type>Text</type>
</CustomField>