force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Customer_Account_Name__c</fullName>
    <label>Customer Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>