force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Data_Intg_Exec_Id__c.field-meta.xml
<CustomField>
    <fullName>EC_Data_Intg_Exec_Id__c</fullName>
    <label>Data Intg Exec Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>