force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Division__c.field-meta.xml
<CustomField>
    <fullName>EC_Division__c</fullName>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>