force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>