force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Employee_Number__c</fullName>
    <label>Employee Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>