force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_FederationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EC_FederationIdentifier__c</fullName>
    <label>FederationIdentifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>