force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Friendly_Name__c</fullName>
    <label>Friendly Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>