force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Is_Demo__c.field-meta.xml
<CustomField>
    <fullName>EC_Is_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demo</label>
    <type>Checkbox</type>
</CustomField>