force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>EC_IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for checking if the records are successfully processed or not</description>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>