force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Language__c.field-meta.xml
<CustomField>
    <fullName>EC_Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>