force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>EC_Last_Processed__c</fullName>
    <label>Last Processed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>