force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>EC_Modified_By__c</fullName>
    <label>Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>