force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>EC_Modified_On__c</fullName>
    <label>Modified On</label>
    <type>DateTime</type>
</CustomField>