force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_MultiSite__c.field-meta.xml
<CustomField>
    <fullName>EC_MultiSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MultiSite</label>
    <type>Checkbox</type>
</CustomField>