force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>