force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Origination_Account_System_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Origination_Account_System_Code__c</fullName>
    <label>Origination Account System Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>