force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Parent_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>EC_Parent_Customer_Account__c</fullName>
    <label>Parent Customer Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>