force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Partner_Function__c.field-meta.xml
<CustomField>
    <fullName>EC_Partner_Function__c</fullName>
    <label>Partner Function</label>
    <length>100</length>
    <type>Text</type>
</CustomField>