force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Phone__c.field-meta.xml
<CustomField>
    <fullName>EC_Phone__c</fullName>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>