force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Port_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EC_Port_Enabled__c</fullName>
    <label>Port Enabled</label>
    <length>100</length>
    <type>Text</type>
</CustomField>