force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>EC_Primary_Key__c</fullName>
    <label>Primary Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>