force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Processing_Log__c.field-meta.xml
<CustomField>
    <fullName>EC_Processing_Log__c</fullName>
    <label>Processing Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>