force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Program_Persona__c.field-meta.xml
<CustomField>
    <fullName>EC_Program_Persona__c</fullName>
    <label>Program Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>