force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_Record_Status__c</fullName>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>