force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_RecordType_ID__c.field-meta.xml
<CustomField>
    <fullName>EC_RecordType_ID__c</fullName>
    <label>RecordType ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>