force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>EC_SalesOrg__c</fullName>
    <label>SalesOrg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>