force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Country_Code__c</fullName>
    <label>SF Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>