force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Locale__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Locale__c</fullName>
    <label>SF Locale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>