force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Notification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Notification_Frequency__c</fullName>
    <label>SF Notification Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>