force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Redemption_URL__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Redemption_URL__c</fullName>
    <label>SF Redemption URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>