force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Status__c</fullName>
    <label>SF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>