force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_SF_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>EC_SF_Street_Address__c</fullName>
    <label>SF Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>