force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Sold_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Sold_To_Account_Number__c</fullName>
    <label>Sold To Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>