force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Source_System_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Source_System_Code__c</fullName>
    <label>Source Code System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>