force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Source_Table__c.field-meta.xml
<CustomField>
    <fullName>EC_Source_Table__c</fullName>
    <label>Source Table</label>
    <length>100</length>
    <type>Text</type>
</CustomField>