force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Stage_Unique_AccNumber__c.field-meta.xml
<CustomField>
    <fullName>EC_Stage_Unique_AccNumber__c</fullName>
    <label>Unique Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>