force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_State_Province__c.field-meta.xml
<CustomField>
    <fullName>EC_State_Province__c</fullName>
    <label>State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>