force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_Status_Code__c</fullName>
    <label>Status Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>