force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>EC_Street_Address_1__c</fullName>
    <label>Street Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>