force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>EC_Target_Object__c</fullName>
    <label>Target Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>