force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Territory_Number__c</fullName>
    <label>Territory Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>