force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>EC_Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>