force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Time_Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>EC_Time_Zone_ID__c</fullName>
    <label>Time Zone ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>