force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Title__c.field-meta.xml
<CustomField>
    <fullName>EC_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>