force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User__c.field-meta.xml
<CustomField>
    <fullName>EC_User__c</fullName>
    <label>User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>