force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User_Account_Alignment_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Account_Alignment_Type__c</fullName>
    <label>Alignment Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>