force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User_Data_Integration_Exec_Id__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Data_Integration_Exec_Id__c</fullName>
    <label>Data Integration Exec Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>