force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User_Key__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Key__c</fullName>
    <label>User Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>