force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>