force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_User_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>EC_User_Status_Code__c</fullName>
    <label>User Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>