force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/EC_Username__c.field-meta.xml
<CustomField>
    <fullName>EC_Username__c</fullName>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>