force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/Redemption_URL__c.field-meta.xml
<CustomField>
    <fullName>Redemption_URL__c</fullName>
    <label>Redemption URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>