force-app/main/default/objects/EC_Mulesoft_CDM_Staging__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDM Registration API</fullName>
            </value>
            <value>
                <fullName>CDM Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>